erDiagram
    User ||--o{ Post : writes
    User ||--o{ Comment : writes
    Post ||--o{ Comment : has
    
    User {
        uuid id PK "主键-唯一标识符"
        string username UK "用户名-唯一"
        string email UK "邮箱-唯一"
        int age "年龄"
        boolean is_active "是否激活"
        text bio "个人简介"
        date birth_date "出生日期"
        time preferred_time "偏好时间"
        datetime created_at "创建时间"
    }
    
    Post {
        uuid id PK "主键-唯一标识符"
        uuid author_id FK "作者ID-外键"
        string title "标题"
        text content "内容"
        int view_count "浏览次数"
        float rating "评分"
        decimal price "价格"
        string status "状态"
        json metadata "元数据"
        datetime created_at "创建时间"
        datetime updated_at "更新时间"
        datetime published_at "发布时间"
    }
    
    Comment {
        uuid id PK "主键-唯一标识符"
        uuid author_id FK "作者ID-外键"
        uuid post_id FK "文章ID-外键"
        text content "评论内容"
        smallint likes "点赞数"
        datetime created_at "创建时间"
    }
